--- a/index.html
+++ b/index.html
@@ -187,13 +187,16 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Responsibility</h1>
     <li>
-        I became a reviewer of《IEEE Transactions on Multimedia》</a>in 2019.
+        I became a reviewer of《Signal Processing: Image Communication》</a>in 2020.
     </li>
     <li>
-        I became a reviewer of《IEEE Signal Processing Letters》</a>in 2019.
+        I became a reviewer of《IEEE Transactions on Multimedia》(TMM)</a>in 2019.
     </li>
     <li>
-        I became a reviewer of《IEEE Transactions on Image Processing》</a>in 2019.
+        I became a reviewer of《IEEE Signal Processing Letters》(SPL)</a>in 2019.
+    </li>
+    <li>
+        I became a reviewer of《IEEE Transactions on Image Processing》(TIP)</a>in 2019.
     </li>
     <li>
         I became a reviewer of《IET Computer Vision》</a>in 2019.
