--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        One paper was submitted to IEEE Access 2020</a>.
+    </li>
+    <li>
         Two papers were submitted to CVPR 2020</a>.
     </li>
     <li>
