--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
     <li>
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
+    </li>
+    <li>
         One paper was submitted to IEEE Access 2020</a>.
     </li>
     <li>
-        Two papers were submitted to CVPR 2020</a>.
-    </li>
-    <li>
         I awarded the "Student Award"  from the organizer as a grant to attend ICCV 2019.
-    </li>
-    <li>
-        One paper was submitted to TMM</a>.
     </li>
     <li>
         One paper was submitted to TNNLS</a>.
