--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="https://github.com/MIVRC/SRRFN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Yiting Yuan, Kangfu Mei, and Faming Fang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">Learning for Computational Imaging (LCI) Workshop</i>
     </li>
@@ -115,6 +116,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u>Juncheng Li</u>, Faming Fang, Kangfu Mei, and Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of European Conference on Computer Vision (ECCV), 2018.</i>
     </li>
 </section>
@@ -151,6 +153,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
+        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
     </li>
@@ -159,6 +162,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2019</i>
 
     </li>
@@ -168,6 +172,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
     </li>
     <li>
@@ -175,6 +180,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
 </section>
