--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Li (李俊诚)</h1>
 
 <p style="font-size: 0.8rem;">
-I am a Ph.D. student at East China Normal University (ECNU). This homepage records the events that occurred during my graduate studies.</br>
-My main research interests include image restoration (image super-resolution, image dehazing, image denoising, image demosaicing, image deblurring, and image enhancement) based on deep learning.</br>
+I am a Ph.D. student at East China Normal University (ECNU). </br>
+My main research interests include image processing (e.g., image super-resolution, image dehazing, image denoising, image demosaicing, image enhancement) and deep learning.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
