--- a/index.html
+++ b/index.html
@@ -6,23 +6,35 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Li (李俊诚)</h1>
 
 <p style="font-size: 0.8rem;">
-I am a Ph.D. student at East China Normal University (ECNU). </br>
-My main research interests include image processing (e.g., image super-resolution, image dehazing, image denoising, image demosaicing, image enhancement) and deep learning.</br>
+I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. Guixu Zhang and Prof. Faming Fang. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 </p>
 
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">News</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Research Interests</h1>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
+        Deep Learning, Computer Vision, Image Processing, particularly in the domains of image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image enhancement, and image compression.
     </li>
+    <li>
+        Network architecture design.
+    </li>
+</section>
+
+<p></p>
+
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
         One paper was submitted to IEEE Access 2020</a>.
     </li>
     <li>
         One paper was submitted to TNNLS</a>.
+    </li>
+    <li>
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
@@ -52,10 +64,10 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30.
+        Academic Visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
     </li>
     <li>
-        Research Assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10.
+        Research Assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
     </li>
 </section>
 
@@ -73,7 +85,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
     </li>
     <li>
-        I won the Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
+        Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
     </li>
     <li>
         We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
@@ -185,7 +197,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Social Responsibility</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
     <li>
         I became a reviewer of《Signal Processing: Image Communication》</a> in 2020.
     </li>
