--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Interests</h1>
     <li>
-        Deep Learning, Computer Vision, Image Processing, particularly in the domains of image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image enhancement, and image compression.
+        Image Processing, particularly in the domains of image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image enhancement, and image compression.
     </li>
     <li>
-        Network architecture design.
+        Deep Learning, Computer Vision.
     </li>
 </section>
 
@@ -37,7 +37,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
+        We have 2 paper accepted to <a href="http://www.vision.ee.ethz.ch/aim19", target="_blank"> ICCV-AIM Workshop 2019</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://sites.google.com/view/iccv-lci2019", target="_blank">ICCV-LCI Workshop 2019 <b>(Oral)</b></a>.
@@ -64,10 +64,10 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
+        I was an academic visitor at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong (CUHK)</a> in 2019.8.16--2019.09.30 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
     </li>
     <li>
-        Research Assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
+        I was a research assistant at <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong (CUHK)</a> in 2018.05.10--2018.09.10 and worked with <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong.</a> 
     </li>
 </section>
 
