--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
+        <b>Soft-edge Assisted Network for Single Image Super-Resolution</b> </br>
+        <a href="", target="_blank">[Paper]</a>
+        <a href="", target="_blank">[Slides]</a>
+        <a href="", target="_blank">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
+        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, First contributor*</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP) 2020</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
+        
+    </li>
+    <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
@@ -199,28 +212,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
     <li>
-        I became a reviewer of《Signal Processing: Image Communication》</a> in 2020.
-    </li>
-    <li>
-        I became a reviewer of《IEEE Transactions on Multimedia》(TMM)</a> in 2019.
-    </li>
-    <li>
-        I became a reviewer of《IEEE Signal Processing Letters》(SPL)</a> in 2019.
-    </li>
-    <li>
-        I became a reviewer of《IEEE Transactions on Image Processing》(TIP)</a> in 2019.
-    </li>
-    <li>
-        I became a reviewer of《IET Computer Vision》</a>in 2019.
-    </li>
-    <li>
-        I became a reviewer of《IET Signal Processing》</a>in 2019.
-    </li>
-    <li>
-        I became a reviewer of《IET Image Processing》</a>in 2018.
-    </li>
-    <li>
-        I became a reviewer of《IET Electronics Letters》</a>in 2018.
+        Journal Reviewer: IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision, IEEE TIP, IEEE SPL, IEEE TMM, Signal Processing: Image Communication.
     </li>
 </section>
 
