--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, First contributor*</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP) 2020</i> </br>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
-        
     </li>
     <li>
         <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
@@ -212,7 +211,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
     <li>
-        Journal Reviewer: IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision, IEEE TIP, IEEE SPL, IEEE TMM, Signal Processing: Image Communication.
+        Journal Reviewer: IEEE TIP, IEEE TMM, IEEE SPL, Signal Processing: Image Communication, IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision.
     </li>
 </section>
 
