--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
+        One paper was submitted to IEEE TMM 2020</a>.
+    </li>
+    <li>
         One paper was submitted to IEEE Access 2020</a>.
     </li>
     <li>
-        One paper was submitted to TNNLS</a>.
+        One paper was submitted to TNNLS 2019</a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
@@ -211,7 +214,13 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Professional Service (Reviewer):</h1>
     <li>
-        Journal Reviewer: IEEE TIP, IEEE TMM, IEEE SPL, Signal Processing: Image Communication, IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision.
+        IEEE TIP, IEEE TMM, IEEE SPL
+    </li>
+    <li>
+        Signal Processing: Image Communication
+    </li>
+    <li>
+        IET Electronics Letters, IET Image Processing, IET Signal Processing, IET Computer Vision
     </li>
 </section>
 
