--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         One paper was submitted to IEEE Access 2020</a>.
     </li>
     <li>
-        One paper was submitted to TNNLS 2019</a>.
+        One paper was submitted to IEEE TNNLS 2019</a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
@@ -108,9 +108,8 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Soft-edge Assisted Network for Single Image Super-Resolution</b> </br>
-        <a href="", target="_blank">[Paper]</a>
-        <a href="", target="_blank">[Slides]</a>
-        <a href="", target="_blank">[Code]</a>
+        [Paper]
+        [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem">Author names alphabetically, First contributor*</p>
