--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <h1 style="font-size: 1rem; font-weight: bold;">Selected Publications</h1>
     <li>
         <b>Soft-edge Assisted Network for Single Image Super-Resolution</b> </br>
-        [Paper]
+        <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
@@ -151,7 +151,6 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <li>
         <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
-        [Poster]
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u>Juncheng Li</u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
@@ -162,6 +161,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <li>
         <b>Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Aiwen Jiang, Kangfu Mei, <u>Juncheng Li</u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -180,6 +180,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     <li>
         <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
         <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -201,7 +202,8 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 
     <li>
         <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping.</b> </br>
-        <a href="", target="_blank">[Paper]</a>
+        <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (ICCVW), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
