--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
     </li>
     <li>
-        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution. 【Oral】</b> </br>
+        <b>Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution 【Oral】</b> </br>
         <a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
         <a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[Slides]</a>
@@ -193,7 +193,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Competition Reports</h1>
     <li>
-        <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results.</b> </br>
+        <b>NTIRE 2018 Challenge on Image Dehazing: Methods and Results</b> </br>
         <a href="paper/CVPRW_2018.pdf", target="_blank">[Paper]</a>
         </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition Workshop (CVPRW), 2018. </i></br>
@@ -201,7 +201,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
     </li>
 
     <li>
-        <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping.</b> </br>
+        <b>AIM 2019 Challenge on Example-based RAW to RGB Mapping</b> </br>
         <a href="paper/ICCVW_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RAW2RGBNet", target="_blank">[Code]</a>
         </br>
