--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         One paper was submitted to IEEE TMM 2020</a>.
     </li>
     <li>
-        One paper was submitted to IEEE Access 2020</a>.
+        One paper was submitted to IEEE TNNLS 2019</a>.
     </li>
     <li>
-        One paper was submitted to IEEE TNNLS 2019</a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank"> TIP 2020</b></a>.
