--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
         [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u>Juncheng Li*</u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, First contributor*</p>
+        <p style="margin: 0; padding-left: 1rem">Author names alphabetically, Main contributor*</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (TIP), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
