--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@ My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jk
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
     <li>
+        <b>Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
+        <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u>Juncheng Li</u>, Jianyi Wan, Mingwen Wang </p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
+    </li>
+    <li>
         <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
