--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ author_profile: true
 <p style="font-size: 0.8rem;">
 I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. Guixu Zhang and Prof. Faming Fang. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
+
 </p>
 
 <p></p>
