--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ author_profile: true
 I'm a Ph.D. student at School of Computer Science & Technology, East China Normal University (ECNU) and work with Prof. Guixu Zhang and Prof. Faming Fang. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
 My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
+Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 
 </p>
 
@@ -17,7 +18,10 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Interests</h1>
     <li>
-        Image Processing, particularly in the domains of image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, image enhancement, and image compression.
+        Image restoration and enhancement, such as image super-resolution, image denoising, image dehazing, image demosaicing, and image enhancement.
+    </li>
+    <li>
+        Image compression.
     </li>
     <li>
         Deep Learning, Computer Vision.
@@ -31,6 +35,9 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
         One paper was submitted to IEEE TMM 2020</a>.
+    </li>
+    <li>
+        One paper was submitted to IEEE TPAMI 2020</a>.
     </li>
     <li>
         One paper was submitted to IEEE TNNLS 2019</a>.
@@ -149,7 +156,7 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
 <p></p>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Guided Publications</h1>
     <li>
         <b>Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
@@ -159,6 +166,22 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
     </li>
+    <li>
+        <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
+        <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
+        <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
+    </li>
+</section>
+
+<p></p>
+
+
+<section style="font-size: 0.7rem;" class="publications">
+    <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Papers</h1>
     <li>
         <b>HighEr-Resolution Network for Image Demosaicing and Enhancing</b> </br>
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
@@ -187,15 +210,6 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of Asian Conference on Computer Vision (ACCV), 2018.</i>
-    </li>
-    <li>
-        <b>An Effective Single-Image Super-Resolution Model Using Squeeze-and-Excitation Networks</b> </br>
-        <a href="paper/ICONIP_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MKFMIKU/SrSENet", target="_blank">[Code]</a>
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang, <u>Juncheng Li</u>, Jihua	Ye, and Mingwen Wang</p>
-        <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Neural Information Processing (ICONIP), 2018.</i>
     </li>
 </section>
 
@@ -242,6 +256,9 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
+        My friend and I build a WeChat Public Account named "快乐AI".
+    </li>
+    <li>
         I became a China Computer Federation member in 2019.
     </li>
     <li>
@@ -253,6 +270,17 @@ My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/p
     <li>
         I build CLFStudio in 2015, a student studio dedicated to creative project development.
     </li>
+</section>
+
+
+<p></p>
+
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
+    <div>
+        <img src="recommend/Happy_AI.jpeg" width="400" height="400" /> 
+    </div>
 </section>
 
 
