--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
-        I build CLFStudio in 2015, a student studio dedicated to creative project development.
+        I build CLFStudio (丛林蜂工作室) in 2015, a student studio dedicated to creative project development.
     </li>
 </section>
 
@@ -278,9 +278,20 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
-    <div>
-        <img src="recommend/Happy_AI.jpeg" width="400" height="400" /> 
-    </div>
+    <li>
+        <b>My WeChat</b> </br>
+        Please indicate the purpose. </br>
+        <div>
+            <img src="recommend/LJC.jpeg" width="200" height="200" /> 
+        </div>
+    </li>
+    <li>
+        <b>WeChat Public Account (快乐AI)</b> </br>
+        <div>
+            <img src="recommend/Happy_AI.jpeg" width="200" height="200" /> 
+        </div>
+    </li>
+    
 </section>
 
 
@@ -292,7 +303,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 </div>
 
 <div align= "center">
-<section style="font-size: 0.7rem;" class="publications"></section>
+<section style="font-size: 0.6rem;" class="publications"></section>
     <h1 style="font-size: 1rem; font-weight: bold;">Statistics from September 12, 2019</h1>
 </section>
 </div>
