--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
     <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
     <li>
         <b>My WeChat (Please indicate the purpose)</b> </br>
-        <div>
+        <div align= "center">
             <img src="recommend/LJC.jpeg" width="200" height="200" /> 
         </div>
     </li>
     <li>
         <b>WeChat Public Account (快乐AI)</b> </br>
-        <div>
+        <div align= "center">
             <img src="recommend/Happy_AI.jpeg" width="200" height="200" /> 
         </div>
     </li>
