--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Social Activity</h1>
     <li>
-        My friend and I build a WeChat Public Account named "快乐AI".
+        My friend and I build a WeChat Official Account named "快乐AI".
     </li>
     <li>
         I became a China Computer Federation member in 2019.
@@ -285,7 +285,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
         </div>
     </li>
     <li>
-        <b>WeChat Public Account (快乐AI)</b> </br>
+        <b>WeChat Official Account (快乐AI)</b> </br>
         <div align= "center">
             <img src="recommend/Happy_AI.jpeg" width="200" height="200" /> 
         </div>
