--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recommend</h1>
     <li>
-        <b>My WeChat (Please indicate the purpose)</b> </br>
+        <b>My WeChat (please indicate the purpose)</b> </br>
         <div align= "center">
             <img src="recommend/LJC.jpeg" width="200" height="200" /> 
         </div>
