--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Long-term co-authors: Kangfu Mei, Aiwen Jiang, ZENG Tieyong, Qiaosi Yi.
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Recent News</h1>
     <li>
-        One paper was submitted to IEEE TMM 2020</a>.
+        One paper was submitted to IEEE TMM 2020 (cooperative)</a>.
     </li>
     <li>
         One paper was submitted to IEEE TPAMI 2020</a>.
